Gradle buildscripting ep 1